--- a/global.css
+++ b/global.css
@@ -263,7 +263,7 @@ background-position: center;}
 background-size: cover;
 background-position: center;}
 
-.div-G{background: url(max.jpeg);
+.div-G{background: url(Max.jpeg);
     background-repeat: no-repeat;
 background-size: cover;
 background-position: center;}
